--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,9 +12,6 @@ on:
   # Allows deployment to be invoked manually through the GitHub Actions user interface.
   #
   workflow_dispatch: 
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
   
 jobs:
   build:
@@ -31,6 +28,6 @@ jobs:
       with:
         node-version: 18.x
         cache: 'npm'
-
+    - run: npm install
     - run: npm ci
     - run: npm test
